--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body,
 }
 
 .clock {
-  width: 90vh;
-  height: 90vh;
+  width: 600px;
+  height: 600px;
   border: 3px solid rgb(71, 126, 99);
   border-radius: 50%;
 }
@@ -24,7 +24,7 @@ body,
   border-radius: 10px;
   position: relative;
   bottom: 90px;
-  left: 25px;
+  left: 20px;
   z-index: 1;
   animation-name: rotateHour;
   animation-duration: 43200s;
@@ -40,7 +40,7 @@ body,
   border-radius: 10px;
   position: relative;
   bottom: 105px;
-  left: 15px;
+  left: 10px;
   z-index: 2;
   animation-name: rotateMinute;
   animation-duration: 3600s;
@@ -56,7 +56,7 @@ body,
   border-radius: 10px;
   position: relative;
   bottom: 125px;
-  left: 5px;
+  z-index: 3;
   animation-name: rotateSecond;
   animation-duration: 60s;
   transform-origin: bottom center;
@@ -70,8 +70,8 @@ body,
   background-color: rgb(0, 0, 0);
   border-radius: 50%;
   position: relative;
-  left: -10px;
-  z-index: 3;
+  left: -15px;
+  z-index: 4;
 }
 
 @keyframes rotateSecond {
